--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                     <li>Search by voice</li>
                     <li>Search by text</li>
                     <li>Geo Location by GPS, network</li>
-                    <li>Google Places</li>
+                    <li>Google Places (optional)</li>
+					<li>Google Time Zone API (optional)</li>
                     <li>Pick locations using "touch" gestures on the map</li>
                     <li>Customization (Theme and layout)</li>
                     <li>Events Tracking</li>
@@ -85,16 +86,16 @@
                     <li><code>android.permission.WRITE_EXTERNAL_STORAGE</code> -  Allows the API to cache map tile data in the device's external storage area.</li>
                 </ul>
 
-                <code>
-                <uses-permission android:name="android.permission.INTERNET" />
-                <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-                <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-                <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-                <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+				<pre class="prettyprint">
+					&lt;uses-permission android:name="android.permission.INTERNET" />
+					&lt;uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+					&lt;uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+					&lt;uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+					&lt;uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-                <uses-feature android:name="android.hardware.location.network" android:required="false" />
-                <uses-feature android:name="android.hardware.location.gps" android:required="false"  />
-                </code>
+					&lt;uses-feature android:name="android.hardware.location.network" android:required="false" />
+					&lt;uses-feature android:name="android.hardware.location.gps" android:required="false"  />
+                </pre>
 
                 <p>You must also explicitly declare that your app uses the <code>android.hardware.location.network</code> or <code>android.hardware.location.gps</code> hardware features if your app targets Android 5.0 (API level 21) or higher and uses the <code>ACCESS_COARSE_LOCATION</code> or <code>ACCESS_FINE_LOCATION</code> permission in order to receive location updates from the network or a GPS, respectively.</p>
 
@@ -127,44 +128,58 @@
                 You only need to use the Builder setters like:</p>
 
                 <pre class="prettyprint">
-Intent intent = new LocationPickerActivity.Builder()
-.withLocation(41.4036299, 2.1743558)
-.withGeolocApiKey("<PUT API KEY HERE>")
-.withSearchZone("es_ES")
-.shouldReturnOkOnBackPressed()
-.withStreetHidden()
-.withCityHidden()
-.withZipCodeHidden()
-.withSatelliteViewHidden()
-.build(getApplicationContext());
+val locationPickerIntent = LocationPickerActivity.Builder()
+	.withLocation(41.4036299, 2.1743558)
+	.withGeolocApiKey("&lt;PUT API KEY HERE>")
+	.withSearchZone("es_ES")
+	.shouldReturnOkOnBackPressed()
+	.withStreetHidden()
+	.withCityHidden()
+	.withZipCodeHidden()
+	.withSatelliteViewHidden()
+	.build(applicationContext)
 
-startActivityForResult(intent, 1);</pre>
+startActivityForResult(locationPickerIntent, MAP_BUTTON_REQUEST_CODE)</pre>
 
                 <p>And add the response code from that activity:</p>
 
                 <pre class="prettyprint">
-@Override
-protected void onActivityResult(int requestCode, int resultCode, Intent data) {
-  if (requestCode == 1) {
-    if(resultCode == RESULT_OK){
-      double latitude = data.getDoubleExtra(LocationPickerActivity.LATITUDE, 0);
-      Log.d("LATITUDE****", String.valueOf(latitude));
-      double longitude = data.getDoubleExtra(LocationPickerActivity.LONGITUDE, 0);
-      Log.d("LONGITUDE****", String.valueOf(longitude));
-      String address = data.getStringExtra(LocationPickerActivity.LOCATION_ADDRESS);
-      Log.d("ADDRESS****", String.valueOf(address));
-      String postalcode = data.getStringExtra(LocationPickerActivity.ZIPCODE);
-      Log.d("POSTALCODE****", String.valueOf(postalcode));
-      Bundle bundle = data.getBundleExtra(LocationPickerActivity.TRANSITION_BUNDLE);
-      Log.d("BUNDLE TEXT****", bundle.getString("test"));
-      Address fullAddress = data.getParcelableExtra(LocationPickerActivity.ADDRESS);
-      if(fullAddress != null)
-      Log.d("FULL ADDRESS****", fullAddress.toString());
+override fun onActivityResult(requestCode: Int, resultCode: Int, data: Intent?) {
+    if (resultCode == Activity.RESULT_OK && data != null) {
+        Log.d("RESULT****", "OK")
+        if (requestCode == 1) {
+            val latitude = data.getDoubleExtra(LATITUDE, 0.0)
+            Log.d("LATITUDE****", latitude.toString())
+            val longitude = data.getDoubleExtra(LONGITUDE, 0.0)
+            Log.d("LONGITUDE****", longitude.toString())
+            val address = data.getStringExtra(LOCATION_ADDRESS)
+            Log.d("ADDRESS****", address.toString())
+            val postalcode = data.getStringExtra(ZIPCODE)
+            Log.d("POSTALCODE****", postalcode.toString())
+            val bundle = data.getBundleExtra(TRANSITION_BUNDLE)
+            Log.d("BUNDLE TEXT****", bundle.getString("test"))
+            val fullAddress = data.getParcelableExtra&lt;Address>(ADDRESS)
+            if (fullAddress != null) {
+                Log.d("FULL ADDRESS****", fullAddress.toString())
+            }
+            val timeZoneId = data.getStringExtra(TIME_ZONE_ID)
+            Log.d("TIME ZONE ID****", timeZoneId)
+            val timeZoneDisplayName = data.getStringExtra(TIME_ZONE_DISPLAY_NAME)
+            Log.d("TIME ZONE NAME****", timeZoneDisplayName)
+        } else if (requestCode == 2) {
+            val latitude = data.getDoubleExtra(LATITUDE, 0.0)
+            Log.d("LATITUDE****", latitude.toString())
+            val longitude = data.getDoubleExtra(LONGITUDE, 0.0)
+            Log.d("LONGITUDE****", longitude.toString())
+            val address = data.getStringExtra(LOCATION_ADDRESS)
+            Log.d("ADDRESS****", address.toString())
+            val lekuPoi = data.getParcelableExtra&lt;LekuPoi>(LEKU_POI)
+            Log.d("LekuPoi****", lekuPoi.toString())
+        }
     }
-    if (resultCode == RESULT_CANCELED) {
-      //Write your code if there's no result
+    if (resultCode == Activity.RESULT_CANCELED) {
+        Log.d("RESULT****", "CANCELLED")
     }
-  }
 }</pre>
 
                 That's all folks!
@@ -193,9 +208,9 @@ protected void onActivityResult(int requestCode, int resultCode, Intent data) {
                 3. Enable it when instantiating <code>LocationPickerActivity</code> by adding <code>.withGooglePlacesEnabled()</code>:</p>
 
                 <pre class="prettyprint">
-Intent intent = new LocationPickerActivity.Builder()
-**.withGooglePlacesEnabled()**
-.build(getApplicationContext());</pre>
+val locationPickerIntent = LocationPickerActivity.Builder()
+    **.withGooglePlacesEnabled()**
+    .build(applicationContext)</pre>
 
                 And you are good to go. :)
 
@@ -229,15 +244,15 @@ Intent intent = new LocationPickerActivity.Builder()
                 You only need to add an "Extra" param to the intent like:</p>
 
                 <pre class="prettyprint">
-Intent intent = new Intent(getApplicationContext(), LocationPickerActivity.class);
-intent.putExtra("test", "this is a test");
-startActivityForResult(intent, 1);</pre>
+val locationPickerIntent = LocationPickerActivity.Builder().build(applicationContext)
+locationPickerIntent.putExtra("test", "this is a test")
+startActivityForResult(locationPickerIntent, MAP_BUTTON_REQUEST_CODE)</pre>
 
                 <p>And parse it on onActivityResult callback:</p>
 
                 <pre class="prettyprint">
-Bundle bundle = data.getBundleExtra(LocationPickerActivity.TRANSITION_BUNDLE);
-String test = bundle.getString("test");</pre>
+val bundle = data.getBundleExtra(LocationPickerActivity.TRANSITION_BUNDLE)
+val test = bundle.getString("test")</pre>
 
                 <h4>Customization</h4>
 
@@ -259,42 +274,42 @@ String test = bundle.getString("test");</pre>
                 Using tha bundle parameter <code>LocationPickerActivity.LAYOUTS_TO_HIDE</code> you can change the visibility of the street, city or the zipcode.</p>
 
                 <pre class="prettyprint">
-intent.putExtra(LocationPickerActivity.LAYOUTS_TO_HIDE, "street|city|zipcode");</pre>
+intent.putExtra(LocationPickerActivity.LAYOUTS_TO_HIDE, "street|city|zipcode")</pre>
 
                 <h5>Search Zone</h5>
 
                 <p>By default the search will be restricted to a zone determined by your default locale. If you want to force the search zone you can do it by adding this line with the locale preferred:</p>
 
                 <pre class="prettyprint">
-intent.putExtra(LocationPickerActivity.SEARCH_ZONE, "es_ES");</pre>
+intent.putExtra(LocationPickerActivity.SEARCH_ZONE, "es_ES")</pre>
 
                 <h5>Force return location on back pressed</h5>
 
                 <p>If you want to force that when the user clicks on back button it returns the location you can use this parameter (note: is only enabled if you don't provide a location):</p>
 
                 <pre class="prettyprint">
-intent.putExtra(LocationPickerActivity.BACK_PRESSED_RETURN_OK, true);</pre>
+intent.putExtra(LocationPickerActivity.BACK_PRESSED_RETURN_OK, true)</pre>
 
                 <h5>Enable/Disable the Satellite view</h5>
 
                 <p>If you want to disable the satellite view button you can use this parameter (note: the satellite view is enabled by default):</p>
 
                 <pre class="prettyprint">
-intent.putExtra(LocationPickerActivity.ENABLE_SATELLITE_VIEW, false);</pre>
+intent.putExtra(LocationPickerActivity.ENABLE_SATELLITE_VIEW, false)</pre>
 
                 <h5>Enable/Disable requesting location permissions</h5>
 
                 <p>If you want to disable asking for location permissions (and prevent any location requests)</p>
 
                 <pre class="prettyprint">
-intent.putExtra(LocationPickerActivity.ENABLE_LOCATION_PERMISSION_REQUEST, false);</pre>
+intent.putExtra(LocationPickerActivity.ENABLE_LOCATION_PERMISSION_REQUEST, false)</pre>
 
                 <h4>Tracking</h4>
 
                 <p>Optionally, you can set a tracking events listener. Implement LocationPickerTracker interface, and set it in your Application class as follows:</p>
 
                 <pre class="prettyprint">
-LocationPicker.setTracker(new <<YourOwnTracker implementing LocationPickerTracker>>());</pre>
+LocationPicker.tracker = &lt;&lt;YourOwnTracker implementing LocationPickerTracker>>()</pre>
 
                 <p>Available tracking events are:</p>
 
@@ -349,38 +364,39 @@ LocationPicker.setTracker(new <<YourOwnTracker implementing LocationPickerTracke
                 <p>To use it first you need to implement the GeocoderViewInterface interface in your class like:</p>
 
                 <pre class="prettyprint">
-public class LocationPickerActivity extends AppCompatActivity implements GeocoderViewInterface {</pre>
+class LocationPickerActivity : AppCompatActivity(), GeocoderViewInterface {</pre>
 
                 <p>Then you need to setup the presenter:</p>
 
                 <pre class="prettyprint">
-private GeocoderPresenter geocoderPresenter;
+private val geocoderPresenter: GeocoderPresenter
 
-@Override protected void onCreate(Bundle savedInstanceState) {
-  super.onCreate(savedInstanceState);
+override fun onCreate(savedInstanceState: Bundle?) {
+  super.onCreate(savedInstanceState)
   ***
-  GooglePlacesDataSource placesDataSource = new GooglePlacesDataSource(Places.getGeoDataClient(this, null));
-  Geocoder geocoder = new Geocoder(this, Locale.getDefault());
-  apiInteractor = new GoogleGeocoderDataSource(new NetworkClient(), new AddressBuilder());
-  GeocoderRepository geocoderRepository = new GeocoderRepository(new AndroidGeocoderDataSource(geocoder), apiInteractor);
-  geocoderPresenter = new GeocoderPresenter(new ReactiveLocationProvider(getApplicationContext()), geocoderRepository, placesDataSource);
-  geocoderPresenter.setUI(this);
+  val placesDataSource = GooglePlacesDataSource(Places.getGeoDataClient(this, null))
+  val geocoder = Geocoder(this, Locale.getDefault())
+  apiInteractor = GoogleGeocoderDataSource(NetworkClient(), AddressBuilder())
+  val geocoderRepository = GeocoderRepository(AndroidGeocoderDataSource(geocoder), apiInteractor!!)
+  val timeZoneDataSource = GoogleTimeZoneDataSource(
+          GeoApiContext.Builder().apiKey(GoogleTimeZoneDataSource.getApiKey(this)).build())
+  geocoderPresenter = GeocoderPresenter(
+          ReactiveLocationProvider(applicationContext), geocoderRepository, placesDataSource, timeZoneDataSource)
+  geocoderPresenter!!.setUI(this)
   ***
 }</pre>
 
                 <p>And besides filling the interface methods you have to add some things to your activity/fragment lifecycle to ensure that there are no leaks.</p>
 
                 <pre class="prettyprint">
-@Override
-protected void onStart() {
-  super.onStart();
-  geocoderPresenter.setUI(this);
+override fun onStart() {
+    super.onStart()
+    geocoderPresenter!!.setUI(this)
 }
 
-@Override
-protected void onStop() {
-  geocoderPresenter.stop();
-  super.onStop();
+override fun onStop() {
+    geocoderPresenter!!.stop()
+    super.onStop()
 }</pre>
 
                 <h5>Tests</h5>
