--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
 &lt;uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
 &lt;uses-feature android:name="android.hardware.location.network" android:required="false" />
-&lt;uses-feature android:name="android.hardware.location.gps" android:required="false"  />
-                </pre>
+&lt;uses-feature android:name="android.hardware.location.gps" android:required="false"  /></pre>
 
                 <p>You must also explicitly declare that your app uses the <code>android.hardware.location.network</code> or <code>android.hardware.location.gps</code> hardware features if your app targets Android 5.0 (API level 21) or higher and uses the <code>ACCESS_COARSE_LOCATION</code> or <code>ACCESS_FINE_LOCATION</code> permission in order to receive location updates from the network or a GPS, respectively.</p>
 
